hphp/test/slow/parser/hh-reserved-name-nothing-2.php.expectf
Fatal error: Cannot use `Nothing` as class name as it is reserved in %s on line 4
